--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -5,8 +5,8 @@
     <h1>Welcome to ChatNexa</h1>
     <p>Connect with friends and start chatting!</p>
     <div class="button-container">
-        <a href="{{ url_for('login') }}">Login</a>
-        <a href="{{ url_for('register') }}">Register</a>
+        <a href="{{ url_for('login') }}" class="btn btn-primary">Login</a>
+        <a href="{{ url_for('register') }}" class="btn btn-secondary">Register</a>
     </div>
 </div>
 {% endblock %}
