--- a/templates/login.html
+++ b/templates/login.html
@@ -6,20 +6,18 @@
         <h2>Login</h2>
         {% with messages = get_flashed_messages() %}
             {% if messages %}
-                <div class="error-message">{{ messages[0] }}</div>
+                <div class="alert alert-danger">{{ messages[0] }}</div>
             {% endif %}
         {% endwith %}
-        <div>
-            <label for="username">Username:</label><br>
-            <input type="text" id="username" name="username" required><br>
+        <div class="form-group">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" class="form-control" required>
         </div>
-        <div>
-            <label for="password">Password:</label><br>
-            <input type="password" id="password" name="password" required><br>
+        <div class="form-group">
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" class="form-control" required>
         </div>
-        <div>
-            <button type="submit">Login</button>
-        </div>
+        <button type="submit" class="btn btn-primary">Login</button>
         <p>Don't have an account? <a href="{{ url_for('register') }}">Register</a></p>
     </form>
 </div>
